# weep-v0.0.1

./: .gitignore  Cargo.toml  README.md  password_manager.db
src/: lib.rs  main.rs
