[package]
name = "rust_password_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"#encoding encrypted data
ring = "0.17.8" #for secure password encryption
rpassword = "7.3.1"# to securely handle input without echoing password
rusqlite = "0.32.1" #sqlite database interaction

