[package]
name = "weep"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"#encoding encrypted data
bcrypt = "0.15.1"
dotenv = "0.15.0"
rand = "0.8.5"
ring = "0.17.8" #for secure password encryption
rpassword = "7.3.1"# to securely handle input without echoing password
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = "0.7.12"
